app/components/views/GetStartedPage/GetStarted.module.css
/* ... */
@media screen and (max-width: 768px) {
  .getstartedNew {
    padding: 86px 0 0 0;
  }

  .releaseNotes {
    height: 77vh;
  }

  .privacyOptions {
    margin: 0 -10px;
  }

  .pageBody.getstarted {
    padding: 20px !important;
    display: flex;
    flex-direction: column;
    height: calc(100% - 40px);
  }

  .pageBody.getstarted.testnetBody::before,
  .pageBody.getstarted::before {
    background-image: var(--small-logo);
    background-size: 30px;
  }

  .contentTitle {
    margin-bottom: 20px;
  }

  .getstarted.content {
    margin-left: 10px;
  }

  .getstarted.loader {
    padding-top: 23px;
    margin-left: 0;
  }

  .advancedDesc {
    width: 315px;
    margin-top: 0;
    margin-bottom: 30px;
  }

  .textToggleButtonRight {
    padding: 6px 10px;
  }

  .loaderButtons {
    margin-bottom: 50px;
  }

  .editWalletsButton {
    margin: 5px 0;
  }

  .loaderBar {
    margin-bottom: 0;
    position: fixed;
    bottom: 0;
    left: 0;
    display: flex;
    flex-direction: column;
  }

  .daemonLabel {
    width: 77px;
  }
  .daemonInput {
    width: 243px;
  }

  .daemonRow.dataform .daemonLabel {
    width: 130px;
  }
  .daemonRow.dataform .daemonInput {
    width: 190px;
  }

  .loaderBarButtons {
    position: fixed;
    margin-left: 115px;
    bottom: 75px;
    right: 20px;
    top: initial;
  }

  .invisibleButton,
  .button {
    padding: 6px 20px;
  }

  .getstarted.loader .contentTitle {
    font-size: 23px;
  }

  .getstarted.loader.logs {
    margin-left: -10px;
    margin-right: -10px;
    padding-top: 30px;
  }

  .logArea .logAreaLogs {
    margin: 20px;
  }

  .logContainer .tabbedPageSubtitle {
    margin-left: 10px;
  }

  .getstarted.loader.logs .goBackScreenButtonArea {
    top: 85px;
    right: 20px;
  }
  .getstarted.loader.logs .loaderSettingsLogs {
    right: -10px !important;
    top: -40px !important;
  }

  .settings .tabbedPageSubtitle {
    margin-left: 20px;
  }

  .settings .goBackScreenButtonArea {
    top: 40px;
    left: 342px;
  }

  .settings .saveButtonWrapper {
    text-align: center;
    width: 355px;
  }

  .daemonRow.multipleRow {
    width: 78%;
  }

  .loaderSettingsLogs {
    right: -30px !important;
  }
}

@media screen and (max-height: 746px) {
  .pageBody.getstarted {
    height: calc(100% - 60px);
  }
}

@media screen and (max-width: 511px) {
  .keyBlueButton {
    margin-top: 0px;
  }
}

@media screen and (max-width: 710px) {
  .privacyOptions.wide,
  .privacyOptions {
    flex-direction: column;
    margin: 0;
    padding: 0;
  }

  .privacyOption {
    width: 100%;
    margin: 0 0 10px 0;
    padding: 0;
    flex-direction: row;
    align-items: flex-start;
    min-height: 137px;
    height: inherit;
  }

  .privacyOptionIcon {
    margin: 20px 0px;
    background-size: 40px;
    width: 80px;
    height: 40px;
    align-self: flex-start;
  }

  .privacyTextContainer {
    margin: 20px 20px 20px 0;
  }
}

@media screen and (max-width: 600px) {
  .daemonRow.multipleRow {
    width: 100%;
  }
}

@media screen and (max-width: 540px) {
  .getstarted.loader .aboutModalButton {
    display: none;
  }
}

@media screen and (max-width: 430px) {
  .getstarted.loader .goBackScreenButtonArea {
    right: 59px;
  }
}

@media screen and (max-width: 375px) {
  .getstartedNew {
    padding: 64px 0 0 0px;
  }
  .title {
    font-size: 23px;
  }
}

